[package]
name = "sgv"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls" , "gzip" , "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
indicatif = "0.17"
atty = "0.2.14"
windows-version = "0.1.0"
structopt = "0.3"